﻿Close the local M1-M4 gaps: OIDC sessions, source snapshots, metric semantics.
Adds the OIDC BFF/worker service identity, the explicit source snapshot and
binding-correction chain, scan-run traceability with persisted boundary
labels, itemid/hostid watermark reconciliation, counter-rate derivation with
reset policy, the read-only acceptance kit, and the matching contracts,
migrations, pages and docs.